@@ -374,22 +374,6 @@ response</description>
 </usage>
 </directivesynopsis>
 
-<directivesynopsis>
-<name>ProxyFtpDirCharset</name>
-<description>Define the character set for proxied FTP listings</description>
-<syntax>ProxyFtpDirCharset <var>character set</var></syntax>
-<default>ProxyFtpDirCharset ISO-8859-1</default>
-<contextlist><context>server config</context><context>virtual host</context>
-<context>directory</context></contextlist>
-<compatibility>Available in Apache 2.2.7 and later</compatibility>
-
-<usage>
-    <p>The <directive>ProxyFtpDirCharset</directive> directive defines the
-    character set to be set for FTP directory listings in HTML generated by
-    <module>mod_proxy_ftp</module>.</p>
-</usage>
-</directivesynopsis>
-
 <directivesynopsis type="section">
 <name>ProxyMatch</name>
 <description>Container for directives applied to regular-expression-matched 
